feat: use session token for API auth
